--- a/includes/extensions/tabs/assets/css/direction/style-rtl.css
+++ b/includes/extensions/tabs/assets/css/direction/style-rtl.css
@@ -16,32 +16,27 @@
     top: 100%; }
 
 .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title {
-  display: table-cell; }
+  display: table-cell;
+  border: 1px solid #e9e9e9;
+  letter-spacing: -.4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 11px; }
+  .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px; }
+  .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px; }
+  .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title,
+  .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title a {
+    color: #383838; }
   .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active {
-    border-bottom-style: none; }
-    .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active:before, .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active:after {
-      bottom: 0;
-      height: 0;
-      width: 999em;
-      border-bottom-style: solid; }
-    .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active:before {
-      right: 100%; }
-    .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active:after {
-      left: 100%; }
-
-.qazana-widget-tabs .qazana-tab-title,
-.qazana-widget-tabs .qazana-tab-title:before,
-.qazana-widget-tabs .qazana-tab-title:after,
-.qazana-widget-tabs .qazana-tab-content,
-.qazana-widget-tabs .qazana-tabs-content-wrapper {
-  border: 1px none #D4D4D4; }
-
-.qazana-widget-tabs .qazana-tab-title::-moz-focus-inner {
-  padding: 0;
-  border: 0; }
-
-.qazana-widget-tabs .qazana-tab-title:focus {
-  outline: 0; }
+    border-bottom-style: none;
+    background-color: #3b55e6; }
+    .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active,
+    .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title.qazana-active a {
+      color: white; }
 
 .qazana-widget-tabs .qazana-tabs {
   text-align: left; }
@@ -50,32 +45,42 @@
   overflow: hidden; }
 
 .qazana-widget-tabs .qazana-tab-title {
-  cursor: pointer; }
+  cursor: pointer;
+  outline: none; }
 
 .qazana-widget-tabs .qazana-tab-desktop-title {
   position: relative;
-  padding: 20px 25px;
+  padding: 5px 30px;
   font-weight: bold;
   line-height: 1;
   border: solid transparent; }
+  .qazana-widget-tabs .qazana-tab-desktop-title a {
+    line-height: 28px; }
   .qazana-widget-tabs .qazana-tab-desktop-title.qazana-active {
-    border-color: #D4D4D4; }
-    .qazana-widget-tabs .qazana-tab-desktop-title.qazana-active:before, .qazana-widget-tabs .qazana-tab-desktop-title.qazana-active:after {
-      display: block;
-      content: '';
-      position: absolute; }
+    border-color: transparent; }
 
 .qazana-widget-tabs .qazana-tab-mobile-title {
   padding: 10px 10px;
   cursor: pointer; }
 
 .qazana-widget-tabs .qazana-tab-content {
-  padding: 20px;
-  display: none; }
+  padding: 20px 0;
+  display: none;
+  opacity: 0;
+  transition: transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3), opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3);
+  transform: translateY(50%);
+  visibility: hidden; }
+  .qazana-widget-tabs .qazana-tab-content.qazana-active {
+    transform: translateY(0);
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+    animation-name: qazanaChangeTabSlideActive;
+    animation-timing-function: ease;
+    animation-duration: .4s; }
 
 @media (max-width: 767px) {
-  .qazana-tabs .qazana-tab-title,
-  .qazana-tabs .qazana-tab-content {
+  .qazana-tabs .qazana-tab-title {
     border-style: solid;
     border-bottom-style: none; }
   .qazana-tabs .qazana-tabs-wrapper {
@@ -92,10 +97,13 @@
     flex-grow: 1;
     border-style: solid;
     border-left-style: none; }
-  .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-content {
-    border-style: solid;
-    border-top-style: none; }
   .qazana-tabs .qazana-tab-mobile-title {
     display: none; } }
+
+@keyframes qazanaChangeTabSlideActive {
+  from {
+    transform: translateX(50px); }
+  to {
+    transform: translateX(0); } }
 
 /*# sourceMappingURL=style-rtl.css.map */
